[project]
name = "docling-harness"
version = "0.1.0"
description = "Supercharged multi-format document-to-markdown converter using Docling and Camelot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.77.0",
    "camelot-py>=1.0.9",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
    "rich>=13.0.0",
    "opencv-python-headless>=4.8.0",
]

[project.scripts]
docling-harness = "docling_md:main"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["docling_md"]
